--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-final-form": "^6.5.9",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.0.0-rc.6",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
