--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.8.6",
@@ -19,7 +19,7 @@
     "react-dom": "18.0.0",
     "react-final-form": "^6.5.9",
     "react-native": "0.69.6",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "0.31.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-paper-dropdown": "^1.0.7",
